--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,7 +33,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 31
-
+    namespace 'com.sammrafi.paypal_native_checkout'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
